# terminal-TODO-app

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Pipfile  Readme.md  beeper.py  netlify.toml.original_file  pyproject.toml  pytest.ini  renovate.json  simpleTUI.py
