[tool.poetry]
name = "terminal-TODO-app"
version = "0.0.1"
description = "A cli TODO app but also blog"
authors = [" crenaz <crenaz@gmail.com>"]

[tool.poetry.dependencies]
psycopg2 = {version = "^2.8", optional = true, extras = ["production"]}
psycopg2-binary = {version = "^2.8", optional = true, extras = ["development"]}
#python-slugify = "^3.0"
coderedcms = "^0.17.0"
django-allauth = "^0.41.0"
django-environ = "^0.4.5"
django-extensions = "^2.2.5"
django-sendmail-backend = "^0.1.2"
django-tailwind = "^0.6.1"
django-widget-tweaks = "^1.4.5"
mysqlclient = "^1.4.6"
pip = "^19.2.3"
python = "^3.8"
pytz = "^2019.3"
sentry-sdk = "^0.13.5"
wagtail-cache = "^0.5.2"
wagtail-import-export = "^0.2"
wagtailcodeblock = "^1.17.1"
wagtailfontawesome = "^1.1.4"
wheel = "^0.33.6"
collectfast = "^1.3.1"
boto3 = "^1.11.9"

[tool.poetry.dev-dependencies]
#docutils = "^0.15.2"
#factory-boy = "^2.12"
bandit = "^1.6.2"
black = "=19.10b0"
coverage = "^5.0"
django-coverage-plugin = "^1.6.0"
django-debug-toolbar = "^2.1"
django-livereload-server = "^0.3.2"
django-sass = "^0.2.0"
flake8 = "^3.7.9"
flake8-blind-except = "^0.1.1"
flake8-docstrings = "^1.5.0"
flake8-isort = "^2.8.0"
isort = { git = "https://github.com/timothycrosley/isort", rev = "18ad293fc9d1852776afe35015a932b68d26fb14" }
mypy = "^0.750"
pep8-naming = "^0.9.1"
pre-commit = "^1.20.0"
ptpython = "^2.0.6"
pydocstyle = "^5.0.1"
pylint-django = "^2.0.13"
pytest = "^5.3.2"
pytest-bandit = "^0.5.2"
pytest-coverage = "^0.0"
pytest-django = "^3.7.0"
pytest-sugar = "^0.9.2"
safety = "^1.8.5"
sphinx = "^2.3.0"
webtest = "^2.0.33"
werkzeug = "^0.16.0"

[tool.poetry.extras]
production = ["psycopg2"]
development = ["psycopg2-binary"]

[tool.poetry.scripts]
dev = "uvicorn:run('$APP_MODULE', host='$DOMAIN', port='$PORT', log_level='$LOG_LEVEL')"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | coderedcms/project_template
    | coderedcms/tests/settings.py
    | .*/migrations
    | \.github
    | ci
    | node_modules
  )/
)
'''

[tool.bandit]
exclude = "/test"

[build-system]
requires = ["poetry>=0.12", "wheel==*"]
build-backend = "poetry.masonry.api"
